src/test/testData/docker/DS026/Dockerfile.denied
ENV <error descr="Potential secret in ENV key found: PASSWORD">PASSWORD=changeme</error>
FROM ubuntu:21
